# issue-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-core-preview-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-SKELETON.md  01-VERIFICATION.md
.planning/phases/02-code-aware-triage-and-answers/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-UAT.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: OPERATOR_GUIDE.md
examples/: config.yaml  issues.fixture.json
issue_agent/: __init__.py  answer.py  apply.py  classifier.py  cli.py  closure.py  codegraph.py  config.py  github.py  links.py  models.py  policy.py  preview.py  state.py  summary.py
skills/github-issue-classify/: SKILL.md
skills/github-issue-close/: SKILL.md
skills/github-issue-reply/: SKILL.md
skills/github-issue-summary/: SKILL.md
tests/: test_answer_policy.py  test_answer_preview.py  test_apply.py  test_classifier_policy.py  test_cli_skeleton.py  test_close_preview.py  test_closure_policy.py  test_codegraph.py  test_config.py  test_github.py  test_links.py  test_operator_docs.py  test_regression_workflows.py  test_safety_regression.py  test_state_preview.py  test_summary_preview.py
(+26 files in other folders)
